--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="google-site-verification" content="NLU1ek9pn9on1DFzt39ODUk0CM0WLxlfRdbuuGjUF1k" />
+    <!-- google serch console -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mtechs</title>
+    <title>mtecs</title>
   </head>
   <body>
     <div id="root"></div>
