--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="NLU1ek9pn9on1DFzt39ODUk0CM0WLxlfRdbuuGjUF1k" />
     <!-- google serch console -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mtecs</title>
+    <title>Mozahid Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
